--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/env/.env.local
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/env/.env.local
@@ -1,10 +1,11 @@
 # Built-in environment variables
 TEAMSFX_ENV=local
-TEAMS_APP_NAME=stocks-update-notif-bot-local
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
 BOT_ID=
-SECRET_BOT_PASSWORD=
 TEAMS_APP_ID=
 BOT_ENDPOINT=
 BOT_DOMAIN=
+
+# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
+SECRET_BOT_PASSWORD=
