--- a/share-now/.vscode/tasks.json
+++ b/share-now/.vscode/tasks.json
@@ -8,12 +8,9 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Install npm packages",
                 "Start local tunnel",
-                "Set up tab",
-                "Set up bot",
-                "Set up SSO",
-                "Build & upload Teams manifest",
+                "Create resources",
+                "Build project",
                 "Start services"
             ],
             "dependsOrder": "sequence"
@@ -28,10 +25,6 @@
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "devCert", // Install localhost SSL certificate. It's used to serve the development sites over HTTPS to debug the Tab app in Teams.
-                    "func", // Install Azure Functions Core Tools. It's used to serve Azure Functions hosted project locally.
-                    "dotnet", // Ensure .NET Core SDK is installed. TeamsFx Azure Functions project depends on extra .NET binding extensions for HTTP trigger authorization.
-                    "ngrok", // Install Ngrok. Bot project requires a public message endpoint, and ngrok can help create public tunnel for your local service.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
@@ -40,35 +33,6 @@
                     9229, // backend inspector port for Node.js debugger
                     3978, // bot service port
                     9239 // bot inspector port for Node.js debugger
-                ]
-            }
-        },
-        {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
-            "type": "teamsfx",
-            "command": "debug-npm-install",
-            "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    },
-                    {
-                        "cwd": "${workspaceFolder}/api",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    },
-                    {
-                        "cwd": "${workspaceFolder}/bot",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
                 ]
             }
         },
@@ -83,57 +47,36 @@
             "type": "teamsfx",
             "command": "debug-start-local-tunnel",
             "args": {
-                "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt"
+                "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt",
+                "env": "local",
+                "output": {
+                    "endpoint": "BOT_ENDPOINT",
+                    "domain": "BOT_DOMAIN"
+                }
             },
             "isBackground": true,
             "problemMatcher": "$teamsfx-local-tunnel-watch"
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-tasks/provision to know the details and how to customize the args.
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "provision",
             "args": {
-                "baseUrl": "https://localhost:53000"
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
-            // Register resources and prepare local launch information for Bot.
-            // See https://aka.ms/teamsfx-debug-set-up-bot-task to know the details and how to customize the args.
-            "label": "Set up bot",
+            // Build project.
+            // See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
+            "label": "Build project",
             "type": "teamsfx",
-            "command": "debug-set-up-bot",
+            "command": "deploy",
             "args": {
-                //// Enter your own bot information if using the existing bot. ////
-                // "botId": "",
-                // "botPassword": "", // use plain text or environment variable reference like ${env:BOT_PASSWORD}
-                "botMessagingEndpoint": "/api/messages" // use your own routing "/any/path", or full URL "https://contoso.com/any/path"
-            }
-        },
-        {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
-            "type": "teamsfx",
-            "command": "debug-set-up-sso",
-            "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
+                "template": "${workspaceFolder}/teamsapp.local.yml",
+                "env": "local"
             }
         },
         {
