--- a/hello-world-bot-with-tab/.vscode/tasks.json
+++ b/hello-world-bot-with-tab/.vscode/tasks.json
@@ -48,8 +48,9 @@
                 "ngrokArgs": "http 3978 --log=stdout --log-format=logfmt",
                 "env": "local",
                 "output": {
-                    "endpoint": "BOT_ENDPOINT",
-                    "domain": "BOT_DOMAIN"
+                    // output to .env.local
+                    "endpoint": "BOT_ENDPOINT", // output tunnel endpoint as BOT_ENDPOINT
+                    "domain": "BOT_DOMAIN" // output tunnel domain as BOT_DOMAIN
                 }
             },
             "isBackground": true,
@@ -62,18 +63,18 @@
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
         {
             // Build project.
-            // See See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
             "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
