--- a/todo-list-with-Azure-backend-M365/.vscode/launch.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch Remote in Teams (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${dev:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "presentation": {
                 "group": "group 1: Teams",
                 "order": 3
@@ -16,7 +16,7 @@
             "name": "Launch Remote in Teams (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${dev:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "presentation": {
                 "group": "group 1: Teams",
                 "order": 3
@@ -27,7 +27,7 @@
             "name": "Launch Remote in Outlook (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://outlook.office.com/host/${dev:teamsAppInternalId}?${account-hint}",
+            "url": "https://outlook.office.com/host/${teamsAppInternalId}?${account-hint}",
             "presentation": {
                 "group": "group 2: Outlook",
                 "order": 3
@@ -38,7 +38,7 @@
             "name": "Launch Remote in Outlook (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://outlook.office.com/host/${dev:teamsAppInternalId}?${account-hint}",
+            "url": "https://outlook.office.com/host/${teamsAppInternalId}?${account-hint}",
             "presentation": {
                 "group": "group 2: Outlook",
                 "order": 3
@@ -49,7 +49,7 @@
             "name": "Launch Remote in the Microsoft 365 app (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://www.office.com/m365apps/${dev:teamsAppInternalId}?auth=2&${account-hint}",
+            "url": "https://www.office.com/m365apps/${teamsAppInternalId}?auth=2&${account-hint}",
             "presentation": {
                 "group": "group 3: the Microsoft 365 app",
                 "order": 3
@@ -60,7 +60,7 @@
             "name": "Launch Remote in the Microsoft 365 app (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://www.office.com/m365apps/${dev:teamsAppInternalId}?auth=2&${account-hint}",
+            "url": "https://www.office.com/m365apps/${teamsAppInternalId}?auth=2&${account-hint}",
             "presentation": {
                 "group": "group 3: the Microsoft 365 app",
                 "order": 3
