--- a/developer-assist-dashboard/aad.manifest.json
+++ b/developer-assist-dashboard/aad.manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "${{AAD_APP_OBJECT_ID}}",
     "appId": "${{AAD_APP_CLIENT_ID}}",
-    "name": "${{APP_NAME_SHORT}}-aad",
+    "name": "developer-assist-dashboard-aad",
     "accessTokenAcceptedVersion": 2,
     "signInAudience": "AzureADMyOrg",
     "optionalClaims": {
