--- a/developer-assist-dashboard/appPackage/manifest.json
+++ b/developer-assist-dashboard/appPackage/manifest.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.14/MicrosoftTeams.schema.json",
-    "manifestVersion": "1.15",
+    "manifestVersion": "1.14",
     "version": "1.0.0",
     "id": "${{TEAMS_APP_ID}}",
     "packageName": "com.microsoft.teams.extension",
@@ -15,12 +15,12 @@
         "outline": "outline.png"
     },
     "name": {
-      "short": "developer-assist-dashboard-${{TEAMSFX_ENV}}",
-      "full": "Full name for developer-assist-dashboard"
+      "short": "dev-assist-dashboard-${{TEAMSFX_ENV}}",
+      "full": "Full name for dev-assist-dashboard"
     },
     "description": {
-        "short": "Short description of developer-assist-dashboard",
-        "full": "Full description of developer-assist-dashboard"
+        "short": "Short description of dev-assist-dashboard",
+        "full": "Full description of dev-assist-dashboard"
     },
     "accentColor": "#FFFFFF",
     "bots": [],
