--- a/command-bot-with-sso/env/.env.dev
+++ b/command-bot-with-sso/env/.env.dev
@@ -1,12 +1,12 @@
+# This file includes environment variables that will be committed to git by default.
+
 # Built-in environment variables
 TEAMSFX_ENV=dev
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
 BOT_ID=
-SECRET_BOT_PASSWORD=
 BOT_DOMAIN=
 AAD_APP_CLIENT_ID=
-SECRET_AAD_APP_CLIENT_SECRET=
 AAD_APP_OBJECT_ID=
 AAD_APP_TENANT_ID=
 AAD_APP_OAUTH_AUTHORITY=
